--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -12,6 +12,10 @@ body {
   font-family: 'Nunito';
   font-size: 18px;
   opacity: 0.8;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; 
 }
 
 p {
