--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,7 @@ body {
   user-select: none; 
 }
 
-p {
+h1, h3, p {
   margin: 0px;
 }
 
@@ -41,4 +41,8 @@ p {
   font-family: 'Nunito';
   font-weight: 700;
   src: url('/fonts/Nunito/Nunito-Bold.ttf');
+}
+@font-face {
+  font-family: 'WhiteAngelica';
+  src: url('/fonts/white_angelica/WhiteAngelica.ttf');
 }
